ACLOCAL_AMFLAGS=-I m4
include $(abs_top_builddir)/Makefile.global
EXTRA_DIST=COPYING
if CAPTIVE_ENABLE_LIBFAAC
  LIBFAAC=libfaac
endif
if CAPTIVE_ENABLE_LIBX264
  LIBX264=libx264
endif
if CAPTIVE_ENABLE_LIBMP3LAME
  LIBMP3LAME=libmp3lame
endif
if CAPTIVE_ENABLE_LIBSPEEX
  LIBSPEEX=libspeex
endif
if CAPTIVE_ENABLE_FFMPEG
  FFMPEG=ffmpeg
endif
SUBDIRS= \
  $(LIBFAAC) $(LIBX264) $(LIBMP3LAME) $(LIBSPEEX) $(FFMPEG)

